@@ -63,6 +63,8 @@ subprojects {
                     "--add-opens",
                     "java.base/java.util.concurrent=ALL-UNNAMED",
                     "--add-opens",
+                    "java.base/java.util=ALL-UNNAMED",
+                    "--add-opens",
                     "java.base/java.net=ALL-UNNAMED",
                     "--add-opens",
                     "java.base/jdk.incubator.concurrent=ALL-UNNAMED"
